@@ -519,6 +519,18 @@
         <artifactId>camunda-xml-model</artifactId>
         <version>${project.version}</version>
       </dependency>
+      
+      <dependency>
+        <groupId>org.python</groupId>
+        <artifactId>jython</artifactId>
+        <version>2.5.3</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.jruby</groupId>
+        <artifactId>jruby-complete</artifactId>
+        <version>1.7.11</version>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
@@ -545,6 +557,7 @@
             <systemPropertyVariables>
               <myWorkingDir>${project.build.directory}</myWorkingDir>
             </systemPropertyVariables>
+            <argLine>-XX:MaxPermSize=128m</argLine>
           </configuration>
         </plugin>
         <plugin>
